--- a/css/coverimage.css
+++ b/css/coverimage.css
@@ -1,3 +1,14 @@
+<div class="bg-img">
+  <div class="container">
+    <div class="topnav">
+      <a href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+    </div>
+  </div>
+</div>
+
 <!DOCTYPE html>
 <html>
 <head>
